tests/baselines/reference/project/moduleMergingOrdering1/amd/moduleMergingOrdering1.errors.txt
a.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
b.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== a.ts (1 errors) ====
    module Test {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        class A {
            one: string;
            two: boolean;
            constructor (t: string) {
                this.one = t;
                this.two = false;
            }
        }
        export class B {
            private member: A[];
    
            constructor () {
                this.member = [];
            }
        }
    }
    
==== b.ts (1 errors) ====
    module Test {}
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    
    